--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   path_drawing: ^1.0.1
   flutter_local_notifications: ^19.4.0
   url_launcher: ^6.3.2
+  enefty_icons: ^1.0.8
 
 dev_dependencies:
   flutter_test:
